src/objects/Marketing__c.object
<CustomObject>
    <description>Object used for capturing RCM1 sync data.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Listings Reviewed</relationshipLabel>
        <relationshipName>Marketing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Marketing</relationshipLabel>
        <relationshipName>Marketing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Viewed Executive Summary from Unique Link</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Viewed Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entered Virtual Deal Room</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Marketing</label>
    <nameField>
        <displayFormat>M{0000000}</displayFormat>
        <label>Marketing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>